test/integration/bad/tuples/array_literal_mismatch.stan
transformed data {
  array[2] tuple(real, real) x = {(1, 2) , (3, 4, 5)};
}
